# dsa-solutions

./: CMakeLists.txt
00_foundations/: two-sum.cpp
00_foundations/00a_sorting_algorithms/: try.cpp
01_two_pointers/01_converging/: 3sum.cpp  4sum.cpp  About.txt  boats-to-save-people.cpp  squares-of-sorted-array.cpp  twosum.cpp
01_two_pointers/02_string_reversal/: reverse-words-in-a-string.cpp  reverseVowels.cpp  reverse_string.cpp
01_two_pointers/03_inplace_array_modification/: About.txt  move_zeros.cpp  remove-duplicates-from-sorted-array-ii.cpp  remove-duplicates-from-sorted-array.cpp  separate-black-and-white-balls.cpp  sort-colors.cpp  string-compression.cpp
01_two_pointers/04_fast_and_slow/: About.txt  Find-Duplicate-Number.cpp  Linked-List-Cycle.cpp  happy-number.cpp  is-subsequence.cpp
01_two_pointers/05_fixed_separation/: delete-middle-node-of-a-linked-list.cpp  middle-of-a-linked-list.cpp  remove-nth-node-from-linkedlist.cpp
01_two_pointers/06_string_comparison_special_chars/: backspace-string-compare.cpp  removing_stars_from_a_string.cpp
01_two_pointers/07_expanding_from_center/: Palindromic-substrings.cpp  longest-palindromic-substring.cpp
02_array_matrix/08_plus_one/: multiply_strings.cpp  plus-one.cpp
02_array_matrix/09_merge_sorted_array/: merge-sorted-array.cpp
02_array_matrix/10_inplace_rotation/: rotate-array.cpp  rotate-image.cpp
02_array_matrix/11_spiral_traversal/: spiral-matrix-ii.cpp  spiral-matrix-iii.cpp  spiral-matrix-iv.cpp  spiral-matrix.cpp
02_array_matrix/12_set_matrix_zeroes/: set-matrix-zero.cpp
